--- a/ideja.html
+++ b/ideja.html
@@ -18,7 +18,6 @@
     <div class="content">
 
         <!-- Navigation -->
-        <img class="nav-img" src="assets/img/Union.png" alt="nav-bg">
         <div class="navigation">
 
             <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
@@ -36,13 +35,13 @@
                 <div class="collapse navbar-collapse nav-wrapper" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Ideja</a>
+                            <a class="nav-link active" href="ideja.html">Ideja</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Piesaki Sapni</a>
+                            <a class="nav-link" href="piesakisapni.html">Piesaki Sapni</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Uzņēmējiem</a>
+                            <a class="nav-link" href="uznemejiem.html">Uzņēmējiem</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Sapņu banka</a>
@@ -62,14 +61,62 @@
         </div> <!-- /.navigation -->
 
         
-        <!-- Footer -->
-        <img class="img-support-sm" src="assets/img/supporters_sm.png" alt="Supporters_sm">
-        <img class="img-support-md" src="assets/img/supporters_md.png" alt="Supporters_md">
-        <img class="img-support" src="assets/img/Supporters.png" alt="Supporters">
+        <h1 class="page-heading">Ideja</h1>
+        
+        <div class="idea-text">
+            <p>Juris Gogulis ir pasaules iedvesmots mākslinieks–horeogrāfs un režisors, kura ikdiena aizrit radot aizkustinošus un iedvesmojošus radošus projektus. Juris ir pārliecināts, ka ir vērts ticēt katram savam sapnim un censties to īstenot. Kā smejas pats - daudzu draugu sapņiem viņš tic vairāk, nekā viņi paši!</p>
+        </div>
 
+        <div class="img-group">
+            <div class="idea-wrapper">
+                <img class="idea-img" src="assets/img/Juris.png" alt="Juris">
+                <img class="idea-img-md" src="assets/img/Juris_md.png" alt="Juris_md">
+                <img class="idea-img-sm" src="assets/img/Juris_sm.png" alt="Juris_sm">
+                <div class="text-wrapper">
+                    <p class="idea-img-text">“Kopš 3 gadu vecuma mani ir audzinājusi mamma, pēc viņas piemēra esmu sapratis, cik sieviete ir spēcīga un varoša. Vēlos atlīdzināt un izveidot platformu, kurā satikties un palīdzēt cilvēkiem piepildīt savus sapņus.”</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="slider-wrap">
+            <div class="testimonial">
+                <div class="slide-row" id="slide">
+                    <div class="slide-col">
+                        <div class="user-text">
+                            <h3>Ken Ludden</h3>
+                            <p class="credentials">Director, Margot Fonteyn Academy of Ballet</p>
+                            <p class="testimonial-text">For it is Juris work that is the 
+                                light the human race needs so badly these days. <br class="testimonial-break"> His vision is inspired and talent is beyond measure.</p>
+                        </div>
+                    </div>
+                    <div class="slide-col">
+                        <div class="user-text">
+                            <h3>Jānis Bērziņš</h3>
+                            <p class="credentials">Virši SIA</p>
+                            <p class="testimonial-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, dolorem amet? Molestiae
+                            </p>
+                        </div>
+                    </div>
+                    <div class="slide-col">
+                        <div class="user-text">
+                            <h3>Anna Ozoliņa</h3>
+                            <p class="credentials">RIMI Latvija</p>
+                            <p class="testimonial-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, dolorem amet? Molestiae</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="indicator">
+                <span class="slider-btn-left"><img id="btn-left" src="assets/img/btn_left.svg" alt="btn-left"><img id="btn-left-dark" src="assets/img/btn_left_dark.svg" alt="btn-left-dark"></span>
+                <span class="slider-btn-right"><img id="btn-right" src="assets/img/btn_right.svg" alt="btn-right"><img id="btn-right-light" src="assets/img/btn_right_light.svg" alt="btn-right-light"></span>
+            </div>
+        </div>
+    </div> <!--/.content-->
+
+        <!-- Footer -->
+    <div class="footer-box">
         <footer class="footer">
-            <img class="img-footer-xxsm" src="assets/img/footer_xxsm.png" alt="Footer_xxsm">
-            <img class="img-footer-xsm" src="assets/img/footer_xsm.png" alt="Footer_xsm">
+            <img class="img-bluefooter-xsm" src="assets/img/bluefooter_xsm.png" alt="Bluefooter_xsm">
             <img class="img-footer-sm" src="assets/img/footer_sm.png" alt="Footer_sm">
             <img class="img-footer-md" src="assets/img/footer_md.png" alt="Footer_md">
             <img class="img-footer" src="assets/img/footer.png" alt="Footer">
@@ -82,9 +129,9 @@
                     </p>
                 </div>
                 <div class="footer-col-2">
-                    <a class="footer-link" href="#">Ideja</a>
-                    <a class="footer-link" href="#">Piesaki sapni</a>
-                    <a class="footer-link" href="#">Uzņēmējiem</a>
+                    <a class="footer-link" href="ideja.html">Ideja</a>
+                    <a class="footer-link" href="piesakisapni.html">Piesaki sapni</a>
+                    <a class="footer-link" href="uznemejiem.html">Uzņēmējiem</a>
                     <a class="footer-link" href="#">Sapņu banka</a>
                     <a class="footer-link" href="#">Sapņus atbalsta</a>
                     <a class="footer-link" href="#">Iedvesmas stāsti</a>
@@ -114,11 +161,11 @@
                 </div>
             </div> <!--/.footer-wrapper-->
         </footer>
+    </div> <!--/.footer-box-->
 
-    </div> <!--/.content-->
 
     <!-- bootstrap5 -->    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script src="assets/js/theme.js"></script>
 </body>
 </html>
